--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span class="hidden">cokolwiek</span>
       </div>
       <div class="box blue">
-        <p class="title" data-id="1">Instalacja w trakcie</p>
+        <p class="title" data-id="1">Cokolwiek tytuł</p>
         <span class="hidden">cokolwiek</span>
       </div>
       <div class="box blue">
